<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->
<resources>
    <string name="stylus_panel_title">Stylus</string>
    <string name="stylus_panel_summary">Control stylus behavior</string>
    <string name="stylus_removed_category_title">Stylus removed</string>
    <string name="stylus_inserted_category_title">Stylus inserted</string>
    <string name="stylus_screen_on_when_removed_title">Turn screen on</string>
    <string name="stylus_screen_on_when_removed_summary">Turn the screen on when removing the stylus</string>
    <string name="stylus_screen_off_when_inserted_title">Turn screen off</string>
    <string name="stylus_screen_off_when_inserted_summary">Turn the screen off when inserting the stylus</string>
    <string name="stylus_vibrate_title">Vibrate</string>
    <string name="stylus_vibrate_when_removed_summary">Vibrate when removing the stylus</string>
    <string name="stylus_vibrate_when_inserted_summary">Vibrate when inserting the stylus</string>
    <string name="stylus_launch_app_title">Launch app when removed</string>
    <string name="stylus_launch_app_none">None</string>
</resources>
